
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int gdImagePtr ;


 int gdImageSX (int ) ;
 int gdImageSY (int ) ;
 int gdImageSetPixel (int ,int,int,int) ;

__attribute__((used)) static void _gdImageFilledHRectangle (gdImagePtr im, int x1, int y1, int x2, int y2, int color)
{
 int x, y;

 if (x1 == x2 && y1 == y2) {
  gdImageSetPixel(im, x1, y1, color);
  return;
 }

 if (x1 > x2) {
  x = x1;
  x1 = x2;
  x2 = x;
 }

 if (y1 > y2) {
  y = y1;
  y1 = y2;
  y2 = y;
 }

 if (x1 < 0) {
  x1 = 0;
 }

 if (x2 >= gdImageSX(im)) {
  x2 = gdImageSX(im) - 1;
 }

 if (y1 < 0) {
  y1 = 0;
 }

 if (y2 >= gdImageSY(im)) {
  y2 = gdImageSY(im) - 1;
 }

 for (x = x1; (x <= x2); x++) {
  for (y = y1; (y <= y2); y++) {
   gdImageSetPixel (im, x, y, color);
  }
 }
}
